# lazuli

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: nightly.yaml
crates/app/: Cargo.toml
crates/app/src/: cli.rs  main.rs  runner.rs  windows.rs
crates/app/src/windows/: call_stack.rs  disasm.rs  display.rs  registers.rs  renderer_info.rs  threads.rs  xfb.rs
crates/app/src/windows/subsystem/: cp.rs  pi.rs
crates/cores/src/: lib.rs
crates/cores/src/cpu/: jit.rs
crates/cores/src/cpu/jit/: icache.rs  mapping.rs  table.rs
crates/cubetool/src/: inspect.rs  main.rs
crates/disks/src/: cso.rs  iso.rs  lib.rs
crates/dspint/src/: exec.rs  lib.rs
crates/dspint/zayd-tests/: main.rs
crates/gekko/src/: lib.rs
crates/gxtex/benches/: benchmarks.rs
crates/gxtex/src/: lib.rs
crates/ipl-hle/: rust-toolchain.toml
crates/jitalloc/: Cargo.toml
crates/jitalloc/src/: lib.rs  region.rs
crates/jitclif/: Cargo.toml
crates/jitclif/src/: isa.rs  lib.rs  libcalls.rs
crates/jitlink/: Cargo.toml
crates/jitlink/src/: lib.rs  libcalls.rs
crates/lazuli/memtest/: main.rs
crates/lazuli/src/: lib.rs  stream.rs  system.rs
crates/lazuli/src/modules/: render.rs
crates/lazuli/src/system/: bus.rs  di.rs  dspi.rs  exi.rs  gx.rs  lazy.rs  pi.rs  vi.rs
crates/lazuli/src/system/bus/: mmio.rs
crates/lazuli/src/system/gx/: cmd.rs  pix.rs  tev.rs  tex.rs  xform.rs
crates/lazuli/src/system/gx/cmd/: attributes.rs
crates/lazuli/src/system/gx/tev/: alpha.rs  color.rs
crates/modules/src/: audio.rs  disk.rs  input.rs
crates/ppcjit/: Cargo.toml
crates/ppcjit/src/: block.rs  builder.rs  cache.rs  hooks.rs  lib.rs  module.rs  sequence.rs  test.rs
crates/ppcjit/src/builder/: arithmetic.rs  branch.rs  compare.rs  exception.rs  floating.rs  memory.rs  others.rs  util.rs
crates/ppcjit/src/snapshots/: ppcjit__test__aarch64_fcmpu_disasm.snap  ppcjit__test__aarch64_gu_mtx_identity_disasm.snap  ppcjit__test__aarch64_gu_vec_add_disasm.snap  ppcjit__test__aarch64_ps_add_acc_disasm.snap  ppcjit__test__fcmpu_clir.snap  ppcjit__test__fcmpu_disasm.snap  ppcjit__test__gu_mtx_identity_clir.snap  ppcjit__test__gu_mtx_identity_disasm.snap  ppcjit__test__gu_vec_add_clir.snap  ppcjit__test__gu_vec_add_disasm.snap  ppcjit__test__gu_vec_scale_arm_disasm.snap  ppcjit__test__gu_vec_scale_clir.snap  ppcjit__test__gu_vec_scale_disasm.snap  ppcjit__test__ps_add_acc_clir.snap  ppcjit__test__ps_add_acc_disasm.snap  ppcjit__test__x86_64_v1_fcmpu_disasm.snap  ppcjit__test__x86_64_v1_gu_vec_scale_disasm.snap  ppcjit__test__x86_64_v1_ps_add_acc_disasm.snap  ppcjit__test__x86_64_v3_fcmpu_disasm.snap  ppcjit__test__x86_v1_gu_mtx_identity_disasm.snap  ppcjit__test__x86_v1_gu_vec_add_disasm.snap  ppcjit__test__x86_v3_gu_mtx_identity_disasm.snap  ppcjit__test__x86_v3_gu_vec_scale_disasm.snap  ppcjit__test__x86_v3_ps_add_acc_disasm.snap
crates/renderer/: Cargo.toml  build.rs
crates/renderer/shaders/: color_convert.wesl  common.wesl  depth_convert.wesl  render.wesl
crates/renderer/shaders/render/: fog.wesl  lighting.wesl
crates/renderer/src/: alloc.rs  blit.rs  lib.rs  render.rs
crates/renderer/src/render/: data.rs  framebuffer.rs  pipeline.rs  texture.rs
crates/renderer/src/render/pipeline/: config.rs  settings.rs  shader.rs
crates/renderer/src/render/pipeline/shader/: texenv.rs  texgen.rs
crates/renderer/src/render/pipeline/shader/texenv/: alpha.rs  color.rs
crates/vtxjit/: Cargo.toml
crates/vtxjit/src/: builder.rs  lib.rs  parser.rs  test.rs
crates/vtxjit/src/builder/: attr.rs
crates/vtxjit/src/snapshots/: vtxjit__test__aarch64_pos(vec3_i16)_chan0(rgba_rgb565)_disasm.snap  vtxjit__test__pos(vec3_i16)_chan0(rgba_rgb565)_clir.snap  vtxjit__test__pos(vec3_i16)_chan0(rgba_rgb565)_disasm.snap  vtxjit__test__x86_64_v1_pos(vec3_i16)_chan0(rgba_rgb565)_clir.snap  vtxjit__test__x86_v1_pos(vec3_i16)_chan0(rgba_rgb565)_disasm.snap  vtxjit__test__x86_v3_pos(vec3_i16)_chan0(rgba_rgb565)_disasm.snap
