[workspace]
resolver = "3"
members = [
    "crates/util",
    "crates/disks",
    "crates/gekko",
    "crates/color",
    "crates/gxtex",
    "crates/jitalloc",
    "crates/jitlink",
    "crates/lazuli",
    "crates/ppcjit",
    "crates/dspint",
    "crates/vtxjit",
    "crates/cores",
    "crates/renderer",
    "crates/modules",

    # binaries
    "crates/cubetool",
    "crates/ipl-hle",
    "crates/app",
]
default-members = [
    # libraries
    "crates/util",
    "crates/disks",
    "crates/gekko",
    "crates/color",
    "crates/gxtex",
    "crates/jitalloc",
    "crates/jitlink",
    "crates/lazuli",
    "crates/ppcjit",
    "crates/dspint",
    "crates/vtxjit",
    "crates/cores",
    "crates/renderer",
    "crates/modules",

    # binaries
    "crates/app",
]

[profile.dev]
panic = "unwind"
codegen-units = 384

[profile.release]
opt-level = 3
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "unwind"
incremental = true
codegen-units = 16
rpath = false

[profile.release-dist]
inherits = "release"
lto = "thin"         # temporary, change to fat when LLVM SIGSEGV is fixed
panic = "abort"
incremental = false
codegen-units = 1

[profile.dev.package."x11rb-protocol"]
opt-level = 0

[profile.dev.package."wayland-protocols"]
opt-level = 0

[profile.dev.package."moxcms"]
opt-level = 0
debug = false

[profile.dev.package."naga"]
opt-level = 1

[profile.dev.package."binrw"]
opt-level = 2

[profile.dev.package."wgpu"]
opt-level = 2

[profile.dev.package."wgpu-core"]
opt-level = 2

[profile.dev.package."zerocopy"]
opt-level = 2

[profile.dev.package."glam"]
opt-level = 2

# workspace crates
[profile.dev.package."disks"]
opt-level = 2

[profile.dev.package."util"]
opt-level = 3

[profile.dev.package."gxtex"]
opt-level = 3

[profile.dev.package."gekko"]
opt-level = 2

[profile.dev.package."ppcjit"]
opt-level = 2

[profile.dev.package."lazuli"]
opt-level = 2

[profile.dev.package."dspint"]
opt-level = 2

[profile.dev.package."renderer"]
opt-level = 2

# patch wgpu to fix dual source blending
[patch.crates-io]
wgpu = { git = "https://github.com/vxpm/wgpu", branch = "v27" }

[workspace.dependencies]
# workspace crates
util = { path = "./crates/util" }
disks = { path = "./crates/disks" }
gekko = { path = "./crates/gekko" }
color = { path = "./crates/color" }
gxtex = { path = "./crates/gxtex" }
jitalloc = { path = "./crates/jitalloc" }
jitlink = { path = "./crates/jitlink" }
lazuli = { path = "./crates/lazuli" }
ppcjit = { path = "./crates/ppcjit" }
dspint = { path = "./crates/dspint" }
vtxjit = { path = "./crates/vtxjit" }
cores = { path = "./crates/cores" }
renderer = { path = "./crates/renderer" }
modules = { path = "./crates/modules" }

# actual dependencies
binrw = { version = "0.15", features = ["std"], default-features = false }
bitos = { git = "https://github.com/vxpm/bitos.git", features = ["zerocopy"] }
bitut = { git = "https://github.com/vxpm/bitut.git" }
bitvec = "1.0"
bytesize = "2"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
cranelift = { version = "0.128", features = ["frontend", "native"] }
cranelift-codegen = { version = "0.128", default-features = false, features = [
    "std",
    "unwind",
    "host-arch",
    "enable-serde",
] }
easyerr = "0.1"
eyre-pretty = { git = "https://github.com/vxpm/eyre-pretty.git" }
glam = { version = "0.32", features = ["zerocopy"] }
indexmap = "2"
insta = "1.46"
libc = "0.2"
nanorand = { version = "0.8", features = ["tls"], default-features = false }
oneshot = { version = "0.1", default-features = false, features = ["std"] }
ordered-float = "5"
powerpc = "0.4"
ring-arena = { git = "https://github.com/vxpm/ring-arena.git" }
rustc-hash = "2"
seq-macro = "0.3"
serde = { version = "1", features = ["derive"] }
static_assertions = "1.1"
strum = { version = "0.27", features = ["derive"] }
tinyvec = { version = "1.10", features = ["alloc"] }
tracing = { version = "0.1", default-features = false, features = [
    "std",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
] }
twox-hash = { version = "2.1", default-features = false, features = [
    "xxhash3_64",
    "xxhash3_128",
    "std",
] }
wesl = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "c160f88", default-features = false, features = [
    "eval",
    "naga-ext",
] }
wesl-quote = { git = "https://github.com/wgsl-tooling-wg/wesl-rs", rev = "c160f88" }
wgpu = { version = "27.0", default-features = false, features = ["counters"] }
zerocopy = { version = "0.8", features = ["derive"] }
windows = { version = ">=0.59", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
rustix = { version = "1.1", features = ["mm"] }
zstd = { version = "0.13", features = ["arrays"], default-features = false }

# lints
[workspace.lints.clippy]
new_without_default = "allow"

assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_ptr_alignment = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
copy_iterator = "warn"
default_union_representation = "warn"
deref_by_slicing = "warn"
doc_link_with_quotes = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
equatable_if_let = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
format_push_string = "warn"
if_then_some_else_none = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
len_without_is_empty = "allow"
linkedlist = "warn"
literal_string_with_formatting_args = "allow"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_ok_or = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
mismatching_type_param_order = "warn"
mut_mut = "warn"
mutex_atomic = "warn"
needless_bitwise_bool = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"
negative_feature_names = "warn"
no_mangle_with_rust_abi = "warn"
non_send_fields_in_send_ty = "warn"
option_option = "warn"
ptr_cast_constness = "warn"
range_minus_one = "warn"
rc_mutex = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_chars_any = "warn"
transmute_ptr_to_ptr = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unsafe_derive_deserialize = "warn"
unused_async = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"
