[package]
name = "app"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dependencies]
lazuli.workspace = true
cores.workspace = true
renderer.workspace = true
modules.workspace = true
vtxjit.workspace = true

eyre-pretty.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
wgpu.workspace = true
nanorand.workspace = true
serde.workspace = true
indexmap.workspace = true
bytesize.workspace = true

eframe = { version = "0.33", features = [
    # platforms
    "wayland",
    "x11",

    # renderer backend
    "wgpu",

    # eframe features
    "persistence",
    "default_fonts",
], default-features = false }
egui_extras = "0.33"
tracing-appender = "0.2"
ron = { version = "0.11" }
typetag = "0.2"
renderdoc = "0.12"
spin_sleep = "1.3"
directories = "6"
image = { version = "0.25", default-features = false, features = ["png"] }
