[package]
name = "jitalloc"
description = "Arena allocator for JITs"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
bytesize.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[target.'cfg(unix)'.dependencies]
rustix.workspace = true
