[package]
name = "ppcjit"
description = "JIT for Gekko PowerPC code using cranelift"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true
cranelift-codegen = { workspace = true, features = ["x86", "arm64"] }
powerpc-asm = "0.4"

[dependencies]
gekko.workspace = true
jitalloc.workspace = true
jitclif.workspace = true

bitos.workspace = true
cranelift.workspace = true
easyerr.workspace = true
rustc-hash.workspace = true
serde.workspace = true
strum.workspace = true
tracing.workspace = true
twox-hash.workspace = true
zerocopy.workspace = true
zstd.workspace = true

fjall = { version = "3", default-features = false }
rmp-serde = "1.3.1"
serde_bytes = "0.11"
