[package]
name = "renderer"
description = "WGPU based renderer implementation"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[build-dependencies]
wesl.workspace = true

[dependencies]
lazuli.workspace = true
util.workspace = true

bitos.workspace = true
tracing.workspace = true
wgpu.workspace = true
zerocopy.workspace = true
wesl.workspace = true
wesl-quote.workspace = true
glam.workspace = true
rustc-hash.workspace = true
seq-macro.workspace = true

flume = "0.12"
schnellru = { version = "0.2", default-features = false }

# some target specific stuff for better build times i hope?
[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "wgsl"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["vulkan", "metal", "wgsl"] }

[target.'cfg(target_family = "windows")'.dependencies]
wgpu = { workspace = true, features = ["dx12", "vulkan", "wgsl"] }
