[package]
name = "vtxjit"
description = "JIT vertex parser using Cranelift"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lints]
workspace = true

[dev-dependencies]
insta.workspace = true

[dependencies]
util.workspace = true
jitalloc.workspace = true
jitlink.workspace = true
lazuli.workspace = true

rustc-hash.workspace = true
zerocopy.workspace = true
cranelift.workspace = true
seq-macro.workspace = true
